# aimaze

./: .gitignore  CMakeLists.txt  README.md  main.cpp  server.py
algorithms/: astar.cpp  battle.cpp  bfs.cpp  dijkstra.cpp  divide.cpp  greedy.cpp
data/: case_0002.json  maze_15_15.json  maze_export.json
include/: ai_player.h  algorithm.h  game_engine.h  game_recorder.h  json_loader.h  model.h
output/: process.txt  result.json  result.txt  visualization.html
src/: ai_player.cpp  game_engine.cpp  game_recorder.cpp  json_loader.cpp
visual/: visualizer.cpp  visualizer.h
